--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <section class="works" id="works">
       <ul class="works__cards ul grid">
         <li class="works__card flex bg-white">
-          <img class="works__card__img" src="images/desktop/tonic-project-desktop.svg" alt="tonic project" />
+          <img class="works__card__img" src="images/desktop/facebook-360-project.svg" alt="tonic project" />
           <div class="works__card__text">
             <h2 class="works__card__title fw-700 fz-32 lh-44 clr-n-800">
               Tonic
@@ -123,18 +123,18 @@
           </div>
         </li>
         <li class="works__card flex bg-white">
-          <img class="works__card__img" src="images/desktop/multi-post-stories-project.svg" alt="multi-post stories project" />
+          <img class="works__card__img" src="images/desktop/multi-post-stories.png" alt="multi-post stories project" />
           <div class="works__card__text">
             <h2 class="works__card__title fw-700 fz-32 lh-44 clr-n-800">
               Multi-Post Stories
             </h2>
             <div class="works__card__subtitle flex">
               <p class="works__card__subtitle-1 fw-600 fz-13 lh-16 clr-n-600">
-                FACEBOOK
+                CANOPY
               </p>
               <ul class="works__card__subtitle-ul flex">
                 <li class="works__card__subtitle-li fw-600 fz-13 lh-16 clr-n-500">
-                  Full Stack Dev
+                  Back End Dev
                 </li>
                 <li class="works__card__subtitle-li fw-600 fz-13 lh-16 clr-n-500"> 
                   2015
@@ -142,16 +142,12 @@
               </ul>
             </div>
             <p class="works__card__dsc fw-400 fz-15 lh-24 clr-n-600">
-              Experimental content creation feature that allows users to add
-              to an existing story over the course of a day without spamming
-              their friends.
+              A daily selection of privately personalized reads; no accounts
+              or sign-ups required.
             </p>
             <div class="works__card__topics flex">
               <p class="works__card__topics__text fw-500 fz-12 lh-16 clr-p-400 bg-p-50">
                 html
-              </p>
-              <p class="works__card__topics__text fw-500 fz-12 lh-16 clr-p-400 bg-p-50">
-                Ruby on rails
               </p>
               <p class="works__card__topics__text fw-500 fz-12 lh-16 clr-p-400 bg-p-50">
                 css
@@ -168,18 +164,18 @@
           </div>
         </li>
         <li class="works__card flex bg-white">
-          <img class="works__card__img" src="images/desktop/facebook-360-project.svg" alt="tonic orange project" />
+          <img class="works__card__img" src="images/desktop/tonic-orange.png" alt="tonic orange project" />
           <div class="works__card__text">
             <h2 class="works__card__title fw-700 fz-32 lh-44 clr-n-800">
-              Facebook 360
+              Tonic
             </h2>
             <div class="works__card__subtitle flex">
               <p class="works__card__subtitle-1 fw-600 fz-13 lh-16 clr-n-600">
-                FACEBOOK
+                CANOPY
               </p>
               <ul class="works__card__subtitle-ul flex">
                 <li class="works__card__subtitle-li fw-600 fz-13 lh-16 clr-n-500">
-                  Full Stack Dev
+                  Back End Dev
                 </li>
                 <li class="works__card__subtitle-li fw-600 fz-13 lh-16 clr-n-500">
                   2015
@@ -187,16 +183,12 @@
               </ul>
             </div>
             <p class="works__card__dsc fw-400 fz-15 lh-24 clr-n-600">
-              Exploring the future of media in Facebook's first Virtual
-              Reality app; a place to discover and enjoy 360 photos and videos
-              on Gear VR.
+              A daily selection of privately personalized reads; no accounts
+              or sign-ups required.
             </p>
             <div class="works__card__topics flex">
               <p class="works__card__topics__text fw-500 fz-12 lh-16 clr-p-400 bg-p-50">
                 html
-              </p>
-              <p class="works__card__topics__text fw-500 fz-12 lh-16 clr-p-400 bg-p-50">
-                Ruby on rails
               </p>
               <p class="works__card__topics__text fw-500 fz-12 lh-16 clr-p-400 bg-p-50">
                 css
@@ -213,27 +205,27 @@
           </div>
         </li>
         <li class="works__card flex bg-white">
-          <img class="works__card__img" src="images/desktop/uber-navigation-project.svg" alt="professional art printing project" />
+          <img class="works__card__img" src="images/desktop/prof-art-project.png" alt="professional art printing project" />
           <div class="works__card__text">
             <h2 class="works__card__title fw-700 fz-32 lh-44 clr-n-800">
-              Uber Navigation
+              Multi-Post Stories
             </h2>
             <div class="works__card__subtitle flex">
               <p class="works__card__subtitle-1 fw-600 fz-13 lh-16 clr-n-600">
-                Uber
+                CANOPY
               </p>
               <ul class="works__card__subtitle-ul flex">
                 <li class="works__card__subtitle-li fw-600 fz-13 lh-16 clr-n-500">
-                  Lead Developer
+                  Back End Dev
                 </li>
                 <li class="works__card__subtitle-li fw-600 fz-13 lh-16 clr-n-500">
-                  2018
+                  2015
                 </li>
               </ul>
             </div>
             <p class="works__card__dsc fw-400 fz-15 lh-24 clr-n-600">
-              A smart assistant to make driving more safe, efficient, and fun
-              by unlocking your most expensive computer: your car.
+              A daily selection of privately personalized reads; no accounts
+              or sign-ups required.
             </p>
             <div class="works__card__topics flex">
               <p class="works__card__topics__text fw-500 fz-12 lh-16 clr-p-400 bg-p-50">
