--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <section class="works" id="works">
       <ul class="works__cards ul grid">
         <li class="works__card flex bg-white">
-          <img class="works__card__img" src="images/desktop/facebook-360-project.svg" alt="tonic project" />
+          <img class="works__card__img" src="images/desktop/facebook-360-project.png" alt="tonic project" />
           <div class="works__card__text">
             <h2 class="works__card__title fw-700 fz-32 lh-44 clr-n-800">
               Tonic
@@ -226,6 +226,7 @@
             <p class="works__card__dsc fw-400 fz-15 lh-24 clr-n-600">
               A daily selection of privately personalized reads; no accounts
               or sign-ups required.
+             
             </p>
             <div class="works__card__topics flex">
               <p class="works__card__topics__text fw-500 fz-12 lh-16 clr-p-400 bg-p-50">
