--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <section class="works" id="works">
       <ul class="works__cards ul grid">
         <li class="works__card flex bg-white">
-          <img class="works__card__img" src="images/desktop/facebook-360-project.png" alt="tonic project" />
+          <img class="works__card__img" src="images/desktop/facebook.png" alt="tonic project" />
           <div class="works__card__text">
             <h2 class="works__card__title fw-700 fz-32 lh-44 clr-n-800">
               Tonic
@@ -123,7 +123,7 @@
           </div>
         </li>
         <li class="works__card flex bg-white">
-          <img class="works__card__img" src="images/desktop/multi-post-stories.png" alt="multi-post stories project" />
+          <img class="works__card__img" src="images/desktop/multi-stories.png" alt="multi-post stories project" />
           <div class="works__card__text">
             <h2 class="works__card__title fw-700 fz-32 lh-44 clr-n-800">
               Multi-Post Stories
@@ -164,7 +164,7 @@
           </div>
         </li>
         <li class="works__card flex bg-white">
-          <img class="works__card__img" src="images/desktop/tonic-orange.png" alt="tonic orange project" />
+          <img class="works__card__img" src="images/desktop/tonic-oranges.png" alt="tonic orange project" />
           <div class="works__card__text">
             <h2 class="works__card__title fw-700 fz-32 lh-44 clr-n-800">
               Tonic
@@ -205,7 +205,7 @@
           </div>
         </li>
         <li class="works__card flex bg-white">
-          <img class="works__card__img" src="images/desktop/prof-art-project.png" alt="professional art printing project" />
+          <img class="works__card__img" src="images/desktop/prof-art.png" alt="professional art printing project" />
           <div class="works__card__text">
             <h2 class="works__card__title fw-700 fz-32 lh-44 clr-n-800">
               Multi-Post Stories
