--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           I’m a software developer! I can help you build a product , feature or
           website Look through some of my work and experience! If you like what
           you see and have a project you need coded, don’t hestiate to contact
-          me.
+          me
         </p>
         <a href="#works" class="head__link link fz-16 fw-500 lh-24 clr-p-400"
           >My Projects</a
@@ -517,6 +517,7 @@
             method="post"
           >
             <ul class="ul">
+              <label for="fname" class="fw-500 fz-17 lh-20"></label>
               <li>
                 <input
                   type="text"
@@ -528,6 +529,7 @@
                   maxlength="30"
                 />
               </li>
+              <label for="email" class="fw-500 fz-17 lh-20"></label>
               <li>
                 <input
                   type="email"
@@ -539,6 +541,7 @@
                 />
               </li>
               <li>
+                <label for="message" class="fw-500 fz-17 lh-20"></label>
                 <textarea
                   id="message"
                   class="fw-500 fz-17 lh-20"
