--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                 name="contact_email" required/>
             </li>
             <li>
-              <label for="message" class="fw-500 fz-17 lh-20">Message:</label>
+              <label for="message" class="fw-500 fz-17 lh-20">Message</label>
               <textarea id="message" class="fw-500 fz-17 lh-20" name="contact_message" placeholder="Write your message here"
                 cols="30" rows="8" maxlength="500" required></textarea>
             </li>
